--- a/hm8_2/style/style.css
+++ b/hm8_2/style/style.css
@@ -34,351 +34,439 @@
        url('../style/montserrat-v14-latin-700.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
        url('../style/montserrat-v14-latin-700.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
 }
-* {
-    margin: 0;
-    padding: 0;
-    font-size: 0;
-    box-sizing: border-box;
+
+
+html {
+  box-sizing: border-box;
+}
+
+*,
+*::before,
+*::after {
+  box-sizing: inherit;
+  margin: 0;
+  padding: 0;
+}
+
+body {
+  margin: 0;
+}
+
+a {
+  display: block;
+}
+
+.container {
+  width: 284px;
+  margin: 0 auto;
+}
+
+/* HEADER */
+header {
+  background-image: url(../img/tablet/element/fon1.png);
+  background-size: cover;
+  background-position: center;
+  padding: 20px 0 138px;
+}
+
+.nav {
+  margin: 0;
+  padding: 0;
+  min-width: 100%;
+  /* margin-bottom: 28px; */
+  margin-bottom: 30px;
+
+}
+
+.logo {
+  font-family: 'Montserrat';
+  font-size: 20px;
+  letter-spacing: 0.05em;
+  color: #ffffff;
+  text-transform: uppercase;
+  text-align: center;
+  text-decoration: none;
+}
+
+.button {
+  list-style: none;
+  justify-content: center;
+  padding: 0;
+  margin: 0;
+  display: flex;
+  outline: none;
+  margin-bottom: 114px;
+}
+
+.button button {
+  width: 90px;
+  font-family: "Montserrat";
+  font-size: 14px;
+  color: #ffffff;
+  cursor: pointer;
+  border: none;
+  background: inherit;
+  padding: 10px 2px;
+  text-align: center;
+  outline: none;
+  font-weight: bold;
+    
   }
   
+
+}
+
+button:hover,
+button:focus {
+  border-style: solid;
+  border-width: 2px;
+  border-color: rgb(255, 255, 255);
+  border-radius: 20px;
+  outline: none;
+
+}
+
+
+.promo-title {
+  width: 300px;
+  margin: 0 auto;
+  color: #ffffff;
+  font-family: 'Montserrat';
+  font-size: 30px;
+  text-align: center;
+  letter-spacing: 0;
+  text-transform: uppercase;
+  font-weight: bold;
+}
+
+
+.promo-subtitle {
+  width: 290px;
+  margin: 0 auto 16px;
+  font-family: 'Roboto', sans-serif;
+  font-size: 18px;
+  text-align: center;
+  letter-spacing: 0;
+  color: #ffffff;
+  font-weight: 400;
+}
+
+.promo button {
+  display: block;
+  width: 280px;
+  font-family: 'Montserrat', sans-serif;
+  font-size: 14px;
+  letter-spacing: 0;
+  color: #ffffff;
+  background-color: #ff4e50;
+  text-align: center;
+  border: 1px solid #ff4e50;
+  border-radius: 20px;
+  margin: 0 auto;
+  padding: 10px 2px;
+  cursor: pointer;
+}
+
+
+/* blok-card section */
+
+h4 {
+  font-family: 'Montserrat', sans-serif;
+  font-size: 21.98px;
+  letter-spacing: 0;
+  color: #333333;
+  text-align: center;
+  width: 268px;
+  line-height: 1.2;
+  margin: 0 auto;
+  margin-top: 70px;
+  margin-bottom: 28px;
+
+}
+
+.partners_list {
+  margin: 0 auto;
+  list-style: none;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-bottom: 26px;
+}
+
+.partners_item {
+  width: 220px;
+  margin: 0 auto;
+  position: relative;
+  padding-bottom: 28px;
+
+}
+
+.partner_wrp {
+  position: relative;
+  width: 122px;
+  height: 122px;
+  margin: 0 auto;
+}
+
+.partner {
+  padding-bottom: 20px;
+}
+
+.small {
+  position: absolute;
+  width: 32px;
+  height: 32px;
+  border-radius: 50%;
+  border: 3px solid #fff;
+  bottom: 0px;
+  right: 0px;
+  z-index: 3;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+.img {
+  display: block;
+  margin: 0 auto;
+}
+
+.icon-1 {
+  background-image: url(../img/tablet/element/tv.png);
+  background-color: #ff4e50;
+  background-position: center;
+}
+
+.icon-2 {
+  background-image: url(../img/tablet/element/chemistry.png);
+  background-color: #ffa507;
+  background-position: center;
+
+}
+
+.icon-3 {
+  background-image: url(../img/tablet/element/cofe.png);
+  background-color: #1cd7ad;
+  background-position: center;
+}
+
+.icon-4 {
+  background-image: url(../img/tablet/element/telegram.png);
+  background-color: #4e73db;
+  background-position: center;
+}
+
+.name_block {
+  font-size: 14px;
+  font-family: "Montserrat";
+  color: rgb(51, 51, 51);
+  font-weight: bold;
+  line-height: 1.2;
+  text-align: center;
+  padding-top: 14px;
+  padding-bottom: 12px;
+}
+
+
+.text_block {
+  font-size: 14px;
+  font-family: "Roboto";
+  letter-spacing: 0;
+  color: rgb(102, 102, 102);
+  text-align: center;
+  line-height: 1.2;
+  margin-bottom: 22px;
+  padding: 0;
+  
+}
+/* Other */
+
+.other {
+  display: flex;
+  justify-content: center;
+  justify-items: center;
+}
+.otr {
+  width: 280px;
+  height: 40px;
+  font-family: 'Montserrat', sans-serif;
+  font-size: 14px;
+  color: rgb(255, 78, 80);
+  border-style: solid;
+  border-width: 2px;
+  border-color: rgb(255, 78, 80);
+  border-radius: 20px;
+  background-color: rgb(255, 255, 255);
+  text-align: center;
+  text-decoration: none;
+  margin-bottom: 60px;
+  line-height: 40px
+}
+
+
+@media (min-width: 768px) and (max-width: 939px) {
   .container {
-    width: 100%;
-    min-width: 320px;
-    margin: 0 auto;
+      width: 668px;
+
   }
-  
-  /* navigation */
+
   header {
-    width: 100%;
-    background-image: url(../img/tablet/element/fon1.png);
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-  }
-  
-  .nav {
-    width: 100%;
-    display: flex;
-    flex-direction: column-reverse;
-    align-items: center;
-  }
-  
-  .menu {
-    display: flex;
-    justify-content: center;
-  }
-  
-  .logo {
-    margin-top: 115px;
-    text-transform: uppercase;
-    text-decoration: none;
-    font-family: "Montserrat", sans-serif;
-    font-weight: 700;
-    font-size: 20px;
-    line-height: 24px;
-    color: #ffffff;
-  }
-  
-  .menu button {
-      display: inline-block;
-    width: 90px;
-    font-family: "Montserrat", sans-serif;
-    font-size: 14px;
-    color: #ffffff;
-    font-weight: 700;
-    border: 2px solid transparent;
-    background: inherit;
-    padding: 10px 2px;
-    border-radius: 40px;
-    text-align: center;
-    outline: none;
-}
-.menu button:hover,
-.menu button:focus{
-    border: 2px solid rgb(255, 255, 255)
-}
-  
-  .menu-item {
-    padding-top: 40px;
-    padding: auto;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 86px;
-    height: 32px;
-    border: 2px;
-    border-style: none;
-    border-color: transparent;
-    border-radius: 20px;
-    transition: border 200ms linear;
-  }
-  
-  
-  
-  .menu-item:hover {
-    border-style: solid;
-  }
-  
-  /* title */
-  .title {
-    margin-top: 36px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-  }
-  
-  .title h2 {
-    font-size: 52px;
-    font-family: "Montserrat";
-    color: rgb(255, 255, 255);
-    font-weight: bold;
-    text-transform: uppercase;
-    line-height: 1.2;
-    text-align: center;
+      background-image: url(../img/tablet/element/fon2.jpg);
+      min-height: 700px;
+      background-repeat: no-repeat;
+      background-position: center;
+      background-size: cover;
+      padding-top: 38px;
   }
 
-
-  
-  h2 .dream{
-      display: block;
-    font-size: 52px;
-    font-family: "Montserrat";
-    color: rgb(255, 255, 255);
-    font-weight: bold;
-    text-transform: uppercase;
-    line-height: 1.2;
-    text-align: center;
-  }
-  
-  .title p {
-    margin-top: 20px;
-    font-family: "Roboto", sans-serif;
-    color: #ffffff;
-    font-weight: 300;
-    font-size: 18px;
-    line-height: 22px;
-  }
-  
-  .title button {
-    margin-top: 20px;
-    font-family: "Montserrat", sans-serif;
-    color: #ffffff;
-    font-weight: 700;
-    font-size: 14px;
-    line-height: 17px;
-    cursor: pointer;
-    background-color: rgb(255, 78, 80);
-    width: 225px;
-    height: 40px;
-    border: none;
-    border-radius: 25px;
-  }
-  
-  /* wraper */
-  .wraper {
-    text-align: center;
-  }
-  
-  .partners {
-    font-family: "Montserrat", sans-serif;
-    color: #333333;
-    font-weight: 700;
-    font-size: 22px;
-    line-height: 26px;
-    margin-top: 74px;
-    text-align: center;
-  }
-  
-  .wraper ul {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-  }
-  
-  .partner {
-    width: 200px;
-    display: flex;
-    flex-direction: column;
-    align-content: center;
-  }
-  
-  .partner img {
-    margin: 0 auto;
-    display: block;
-    border-radius: 50%;
-  }
-  
-  .partner h3 {
-    margin-top: 22px;
-    font-family: "Montserrat", sans-serif;
-    color: #333333;
-    font-weight: 700;
-    font-size: 14px;
-    line-height: 17px;
-  }
-  
-  .partner::before {
-    content: "";
-    display: block;
-    border-style: solid;
-    border-width: 4px;
-    border-color: rgb(255, 255, 255);
-    border-radius: 50%;
-    width: 37px;
-    height: 37px;
-    transform: translate(132px, 126px);
-    background-position: center;
-    background-repeat: no-repeat;
-  }
-  
-  .partner-1::before {
-    background-color: rgb(255, 78, 80);
-    background-image: url(../img/tablet/element/tv.png);
-  }
-  
-  
-  .partner-2::before {
-    background-color: rgb(255, 165, 7);
-    background-image: url(../img/tablet/element/chemistry.png);
-  }
-  .partner-3::before {
-    background-color: rgb(28, 215, 173);
-    background-image: url(../img/tablet/element/cofe.png);
-  }
-  
-  
-  .partner-4::before {
-    background-color: rgb(78, 115, 219);
-    background-image: url(../img/tablet/element/telegram.png);
-  }
-  
-  .partner p {
-    font-family: "Roboto", sans-serif;
-    color: #666666;
-    font-weight: 300;
-    font-size: 14px;
-    line-height: 17px;
-    text-align: center;
-    margin-top: 20px;
-  }
-  
-  .wraper button {
-    margin-top: 36px;
-    margin-bottom: 74px;
-    font-family: "Montserrat", sans-serif;
-    font-weight: 700;
-    color: #ff4e50;
-    font-size: 14px;
-    line-height: 17px;
-    border-style: solid;
-    border-radius: 25px;
-    border-width: 2px;
-    border-color: rgb(255, 78, 80);
-    background-color: #fff;
-    width: 196px;
-    height: 44px;
-    cursor: pointer;
-  }
-  /* ----TABLET---- */
-@media screen and (min-width: 768px) and (max-width: 939px) {
-    .background{
-    background-image: url(../img/tablet/element/fon2.jpg);
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    width: 100%;
-   }
-    .nav {
-      max-width: 672px;
-      flex-direction: row;
+  .wrapper {
+      display: flex;
       justify-content: space-between;
-      align-items: baseline;
-    }
-  
-    .logo {
-      margin-top: 0;
-    }
-  
-    .title {
-      margin-top: 150px;
-    }
-  
-    .title h2 {
+      align-items: center;
+      margin-bottom: 138px;
+  }
+
+  .logo {
+      order: 1;
+  }
+
+  .button {
+      order: 2;
+      width: 200px;
+      margin: 0;
+
+  }
+
+  .promo-title {
+      width: 492px;
       font-size: 52px;
-      line-height: 62px;
-    }
-  
-    .title p {
-      margin-top: 40px;
+      margin: 0 auto 26px;
+  }
+
+  .promo-subtitle {
+      width: 404px;
       font-size: 24px;
-      line-height: 29px;
-    }
-  
-    .title form button {
-      margin-top: 20px;
-    }
-  
-    .wraper ul {
-      max-width: 492px;
+      margin: 0 auto 34px;
+  }
+
+  .promo button {
+      width: 225px;
+      padding: 10px 2px;
+  }
+
+  h4 {
+      width: 404px;
+      margin-bottom: 32px;
+  }
+
+  .partners_list {
       flex-direction: row;
       flex-wrap: wrap;
-      justify-content: space-evenly;
-      margin: 0 auto;
-      align-items: flex-start;
-    }
-  
-    .partner {
-      width: 46%;
-    }
-  }
-  
-  /* ----DESKTOP---- */
-  @media screen and (min-width: 940px) {
-    header{
+      width: 464px;
 
-    background-image: url(../img/tablet/element/fon3.jpg);
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    }
-    header {
-      height: 700px;
-    }
-  
-    .nav {
-      flex-direction: row;
-      justify-content: space-between;
-      align-items: baseline;
-    }
-  
-    .logo {
-      margin-top: 0;
-    }
-  
-    .title {
-      margin-top: 150px;
-    }
-  
-    .title h2 {
-      font-size: 52px;
-      line-height: 62px;
-    }
-  
-    .title p {
-      margin-top: 40px;
-      font-size: 24px;
-      line-height: 29px;
-    }
-  
-    .title form button {
-      margin-top: 20px;
-    }
-  
-    .wraper ul {
-      flex-direction: row;
-      justify-content: space-between;
-      align-items: flex-start;
-    }
   }
+
+  .partners_item.one {
+      order: 1;
+  }
+
+  .partners_item.two {
+      order: 3;
+  }
+
+  .partners_item.three {
+      order: 2;
+  }
+
+  .partners_item.four {
+      order: 4;
+  }
+  section button {
+      width: 192px;
+      padding: 10px 2px;
+  }
+}
+
+@media (min-width: 940px) {
+
+  .container {
+      width: 940px;
+      margin: 0 auto;
+  }
+
+
+  header {
+      background-image: url(../img/tablet/element/fon3.jpg);
+      min-height: 700px;
+      background-repeat: no-repeat;
+      background-position: center;
+      background-size: cover;
+      padding-top: 38px;
+  }
+
+  .wrapper {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      margin-bottom: 138px;
+  }
+
+  .logo {
+      order: 1;
+  }
+
+  .button {
+      order: 2;
+      width: 200px;
+      margin: 0;
+
+  }
+
+  .promo-title {
+      width: 500px;
+      font-size: 52px;
+      margin: 0 auto 26px;
+  }
+
+  .promo-subtitle {
+      width: 404px;
+      font-size: 24px;
+      margin: 0 auto 34px;
+  }
+
+  .promo button {
+      width: 225px;
+      padding: 10px 2px;
+  }
+
+  h4 {
+      width: 404px;
+      margin-bottom: 32px;
+  }
+
+  .partners_list {
+      flex-direction: row;
+      width: 940px;
+
+  }
+
+  .partners_item.one {
+      order: 1;
+  }
+
+  .partners_item.two {
+      order: 3;
+  }
+
+  .partners_item.three {
+      order: 2;
+  }
+
+  .partners_item.four {
+      order: 4;
+  }
+
+  section button {
+      width: 192px;
+      padding: 10px 2px;
+  }
+}
