--- a/hm8_2/style/style.css
+++ b/hm8_2/style/style.css
@@ -104,23 +104,21 @@ header {
   font-size: 14px;
   color: #ffffff;
   cursor: pointer;
-  border: none;
   background: inherit;
   padding: 10px 2px;
   text-align: center;
   outline: none;
   font-weight: bold;
-  border: 2px transparent;
+  border: 2px solid transparent;
   }
 
 button:hover,
-button:focus {
+button:focus:hover{
+  border: 1px solid black;
   border-style: solid;
   border-width: 2px;
   border-color: rgb(255, 255, 255);
   border-radius: 20px;
-  outline: none;
-
 }
 
 
