--- a/hm8_2/style/style.css
+++ b/hm8_2/style/style.css
@@ -357,6 +357,7 @@ h4 {
       flex-direction: row;
       flex-wrap: wrap;
       width: 464px;
+      align-items: flex-start;
 
   }
 
@@ -440,6 +441,7 @@ h4 {
   .partners_list {
       flex-direction: row;
       width: 940px;
+      align-items: flex-start;
 
   }
 
