--- a/hm10/css/style.css
+++ b/hm10/css/style.css
@@ -46,59 +46,12 @@
 
 
 
-
-
-html {
-    -webkit-box-sizing: border-box;
-            box-sizing: border-box;
-}
-
-*,
-*::before,
-*::after {
-    -webkit-box-sizing: inherit;
-            box-sizing: inherit;
-    margin: 0;
-    padding: 0;
-}
-
-a {
-    text-decoration: none;
-}
-
-img {
-    max-width: 100%;
-    height: auto;
-    display: block;
-}
-
-ol,
-ul {
-    list-style: none;
-}
-
-/* VISUALLY HIDDEN */
-.visually-hidden:not(:focus):not(:active),
-input[type="checkbox"].visually-hidden,
-input[type="radio"].visually-hidden {
-  position: absolute;
-  width: 1px;
-  height: 1px;
-  margin: -1px;
-  border: 0;
-  padding: 0;
-  white-space: nowrap;
-  -webkit-clip-path: inset(100%);
-          clip-path: inset(100%);
-  clip: rect(0 0 0 0);
-  overflow: hidden;
-}
 /* Header */
 
 .page-header {
-  background-image: -webkit-gradient( linear, left top, left bottom, from(rgba(252,227,138,0.9)), to(rgba(243,129,129,0.9))), url("../img/eagle.png");
-  background-image: -o-linear-gradient( top, rgba(252,227,138,0.9) 0%, rgba(243,129,129,0.9) 100%), url("../img/eagle@2x.png");
-  background-image: linear-gradient( 180deg, rgba(252,227,138,0.9) 0%, rgba(243,129,129,0.9) 100%), url("../img/eagle@2x.png");
+  background-image: -webkit-gradient( linear, left top, left bottom, from(rgba(243,129,129,0.9)), to(rgba(252,227,138,0.9))), url("../img/eagle@2x.png");
+  background-image: -o-linear-gradient( top, rgba(243,129,129,0.9) 0%, rgba(252,227,138,0.9) 100%), url("../img/eagle@2x.png");
+  background-image: linear-gradient( 180deg, rgba(243,129,129,0.9) 0%, rgba(252,227,138,0.9) 100%), url("../img/eagle@2x.png");
     background-repeat: no-repeat;
     background-position: center top;
     background-size: cover;
@@ -109,7 +62,7 @@ input[type="radio"].visually-hidden {
     
 }
 
-
+.list-
 .header-container {
     width: 1200px;
     margin: 0 auto;
@@ -158,6 +111,7 @@ input[type="radio"].visually-hidden {
     font-family: "Montserrat";
     text-transform: uppercase;
     text-align: center;
+    text-decoration: none;
     color: #fff;
 }
 
@@ -166,7 +120,7 @@ input[type="radio"].visually-hidden {
     content: "";
     width: auto;
     height: 4px;
-    background-color: #f38181;
+    background-color: #fce38a;
     opacity: 0;
     margin-top: 12px;
 }
@@ -237,16 +191,19 @@ input[type="radio"].visually-hidden {
 
 @media (-webkit-min-device-pixel-ratio: 2), (-o-min-device-pixel-ratio: 2/1), (min-resolution: 192dpi) {
   .page-header {
-    background-image: -webkit-gradient( linear, left top, left bottom, from(rgba(252,227,138,0.9)), to(rgba(243,129,129,0.9))),
+    background-image: -webkit-gradient( linear, left top, left bottom, from(rgba(243,129,129,0.9)), to(rgba(252,227,138,0.9))),
       url("../img/eagle@2x.png");
-    background-image: -o-linear-gradient( top, rgba(252,227,138,0.9) 0%, rgba(243,129,129,0.9) 100%),
+    background-image: -o-linear-gradient( top, (rgba(243,129,129,0.9)), to(rgba(252,227,138,0.9) 100%)),
       url("../img/eagle@2x.png");
-    background-image: linear-gradient( 180deg, rgba(252,227,138,0.9) 0%, rgba(243,129,129,0.9) 100%),
-      url("../img/eagle@2x.png");
+    background-image: linear-gradient( 180deg, (rgba(243,129,129,0.9)), to(rgba(252,227,138,0.9) 100%),
+      url("../img/eagle@2x.png"));
   }
 }
-
 /* Service section */
+.services__list,
+.team-item{
+  list-style-type: none;
+}
 
 .services {
     padding-bottom: 92px;
@@ -394,7 +351,7 @@ input[type="radio"].visually-hidden {
     margin-right: 30px;
   }
   
-  }
+  
   .team-img {
     display: block;
     max-width: 100%;
