--- a/hm10/css/style.css
+++ b/hm10/css/style.css
@@ -83,6 +83,7 @@
     display: block;
     font-size: 30px;
     font-family: "Montserrat";
+    text-decoration: none;
     color: #fff;
     font-weight: bold;
     text-align: left;
