--- a/hm10/css/style.css
+++ b/hm10/css/style.css
@@ -61,9 +61,9 @@
 /* Header */
 
 .page-header {
-    background-image: -webkit-gradient( linear, left top, left bottom, from(rgba(243,129,129,0.9)), to(rgba(252,227,138,0.9))), url("/img/eagle@2x.png");
-    background-image: -o-linear-gradient( top, rgba(243,129,129,0.9) 0%, rgba(252,227,138,0.9) 100%), url("/img/eagle@2x.png");
-    background-image: linear-gradient( 180deg, rgba(243,129,129,0.9) 0%, rgba(252,227,138,0.9) 100%), url("/img/eagle@2x.png");
+    background-image: -webkit-gradient( linear, left top, left bottom, from(rgba(243,129,129,0.9)), to(rgba(252,227,138,0.9))), url("../img/eagle@2x.png");
+    background-image: -o-linear-gradient( top, rgba(243,129,129,0.9) 0%, rgba(252,227,138,0.9) 100%), url("../img/eagle@2x.png");
+    background-image: linear-gradient( 180deg, rgba(243,129,129,0.9) 0%, rgba(252,227,138,0.9) 100%), url("../img/eagle@2x.png");
       background-repeat: no-repeat;
       background-position: center top;
       background-size: cover;
@@ -295,40 +295,40 @@
   }
   
   .services__list--item:nth-child(1) {
-      background-image: url(/img/ALARM.png);
+      background-image: url(../img/ALARM.png);
       background-repeat: no-repeat;
       background-position: 5% 0;
       margin-bottom: 98px;
     }
 
     .services__list--item:nth-child(2) { 
-      background-image: url(/img/line2.png);
+      background-image: url(../img/line2.png);
       background-repeat: no-repeat;
       background-position: 5% 0;
       margin-bottom: 98px;
     }
     .services__list--item:nth-child(3) {
     
-      background-image: url(/img/comp.png);
+      background-image: url(../img/comp.png);
       background-repeat: no-repeat;
       background-position: 5% 0;
       margin-bottom: 98px;
   }
   .services__list--item:nth-child(4) {
-      background-image: url(/img/BOOK.png);
+      background-image: url(../img/BOOK.png);
       background-repeat: no-repeat;
       background-position: 5% 0;
       margin-bottom: 98px;
     }
     .services__list--item:nth-child(5) {
-      background-image: url(/img/HOME.png);
+      background-image: url(../img/HOME.png);
       background-repeat: no-repeat;
       background-position: 5% 0;
       margin-bottom: 98px;
     }
     .services__list--item:nth-child(6) {
      
-      background-image: url(/img/IMAGE.png);
+      background-image: url(../img/IMAGE.png);
       background-repeat: no-repeat;
       background-position: 5% 0;
       margin-bottom: 98px;
